--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "nodebb-plugin-trophies",
-  "version": "0.0.2",
+  "name": "nodebb-plugin-trophies-updated",
+  "version": "0.0.3",
   "description": "Trophies for users of NodeBB",
   "main": "library.js",
-  "minver": "0.9.2",
   "scripts": {
     "test": "no."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toxuin/nodebb-plugin-trophies"
+    "url": "https://github.com/mudkipme/nodebb-plugin-trophies"
   },
   "keywords": [
     "nodebb",
@@ -24,10 +23,10 @@
   },
   "license": "BSD-2-Clause",
   "bugs": {
-    "url": "https://github.com/toxuin/nodebb-plugin-trophies/issues"
+    "url": "https://github.com/mudkipme/nodebb-plugin-trophies/issues"
   },
-  "homepage": "https://github.com/toxuin/nodebb-plugin-trophies",
+  "homepage": "https://github.com/mudkipme/nodebb-plugin-trophies",
   "nbbpm": {
-    "compatibility": "^0.9.0"
+    "compatibility": "^1.0.0"
   }
 }
